Time breakdown of the total violations in the EU

--- a/gdpr_violations.ipynb
+++ b/gdpr_violations.ipynb
@@ -802,6 +802,7 @@
     }
    ],
    "source": [
+    "### LOAD THE DATA\n",
     "gdpr_violations = pd.read_csv(r'C:\\Users\\USER\\OneDrive\\Documents\\GitHub\\0502-capstone-gdpr-violations-Tracy-teb\\2022 GDPR_fines_cleaned.csv')\n",
     "gdpr_violations"
    ]
@@ -1787,7 +1788,7 @@
    "source": [
     "# Replace missing dates with a default value (e.g., 'NA')\n",
     "gdpr_violations[\"Date\"] = gdpr_violations[\"Date\"].fillna(\"NA\")\n",
-    "# Filter for 2022 (now includes rows with 'NA')\n",
+    "# Filter for 2022 (includes rows with 'NA')\n",
     "violations_2022 = gdpr_violations[gdpr_violations[\"Date\"].str.contains(\"2022\")]  \n"
    ]
   },
